# annotator

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
annotator/: settings.py  urls.py  utils.py
annotator.egg-info/: PKG-INFO  SOURCES.txt
data/sample/: INDEX.csv  createsample.py  sample_document_1.json  sample_document_10.json  sample_document_11.json  sample_document_12.json  sample_document_13.json  sample_document_14.json  sample_document_15.json  sample_document_16.json  sample_document_17.json  sample_document_18.json  sample_document_19.json  sample_document_2.json  sample_document_20.json  sample_document_21.json  sample_document_22.json  sample_document_23.json  sample_document_24.json  sample_document_25.json  sample_document_26.json  sample_document_27.json  sample_document_28.json  sample_document_29.json  sample_document_3.json  sample_document_30.json  sample_document_31.json  sample_document_32.json  sample_document_33.json  sample_document_34.json  sample_document_35.json  sample_document_36.json  sample_document_37.json  sample_document_38.json  sample_document_39.json  sample_document_4.json  sample_document_40.json  sample_document_41.json  sample_document_42.json  sample_document_43.json  (+18 more)
db/mysql/: my.conf
editor/: models.py
editor/migrations/: 0001_initial.py
examples/: models.py  permissions.py  serializers.py  urls.py  views.py
examples/migrations/: 0001_initial.py  (+4 more)
frontend/: .env  Dockerfile  auth_config.json  package-lock.json  package.json  vue.config.js
molpheme/: __init__.py  mecab.py  molpheme.py
(+20 files in other folders)
