[tool.poetry]
name = "annotator"
version = "0.0.1"
description = "Annotator for toutobu/datasets."
authors = ["p-baleine <p.baleine@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mysqlclient = "^1.4.6"
django = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
